# rock-the-conda

./: LICENSE  README.md  build_feedstocks.py  extract_the_rock_deps.py  feedstock_info.py  feedstocks.yaml  pixi.toml  prj_info.yaml
.github/workflows/: build-conda-pkgs.yml  build-therock.yml
conda_forge_pinnings/: conda_build_config.yaml
examples/llama.cpp/: .gitignore  pixi.toml
extract_deps_project/: CMakeLists.txt
extract_deps_project/cmake/: therock_subproject.cmake
recipes/: bump_version.py  conda_build_config.yaml  upload_all.py
recipes/aqlprofile/: build.sh  recipe.yaml
recipes/composable-kernel/: build.sh  recipe.yaml
recipes/gotcha/: build.sh  recipe.yaml
recipes/hip/: 0001-Make-cmake-rocm-detection-required.patch  0001-Mark-raw-strings.patch  0002-Fix-cmake-backward-compatibility.patch  build.sh  hipcc-path.diff  meta.yaml
recipes/hipblas/: build.sh  recipe.yaml
recipes/hipblas-common/: recipe.yaml
recipes/hipblaslt/: build.sh  fix_latest_msgpack_cxx.patch  recipe.yaml
recipes/hipfft/: build.sh  recipe.yaml
recipes/hipify/: build.sh  fix-llvm-diagnosticoptions.patch  recipe.yaml
recipes/hiprand/: build.sh  recipe.yaml
recipes/hipsolver/: build.sh  recipe.yaml
recipes/hipsparse/: recipe.yaml
recipes/llama.cpp/: 0001-Change-gpuAddress-for-contents.patch  conda_build_config.yaml  recipe.yaml
recipes/migraphx/: build.sh  fix-msgpack-cmake.patch  fix-rocmlir-find.patch  recipe.yaml
recipes/miopen/: build.sh  recipe.yaml
recipes/miopen-hip/: build.sh  recipe.yaml
recipes/perfetto/: build.sh  recipe.yaml
recipes/ptl/: build.sh  recipe.yaml
recipes/rccl/: build.sh  recipe.yaml
recipes/rocblas/: build.sh  recipe.yaml
recipes/rocfft/: recipe.yaml
(+68 files in other folders)
